Improve Diesel Images, add image credits

--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -2089,8 +2089,9 @@
 <li>
 <p class="folderTitle">Current</p>
 <p class="itemText">Current refers to the flow of electric charge in an electrical circuit. It is the rate at which electric charges, typically electrons, move through a conductor. Electrons, which are negatively charged particles, are the primary carriers of electric charge in most conductive materials.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;definition&gt;&lt;statement&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Current is measured in amperes (A) and is represented by the symbol I. It can be thought of as the quantity of charge passing through a point in a circuit per unit of time, or alternately as...</p>
+<p class="itemText"><p class="p1"><span class="s1">Current can be initiated and sustained in a number of ways, including&lt;ul&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Chemical reaction &lt;p&gt;Batteries and fuel cells use this principle.&lt;/p&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Electromagnetic induction &lt;p&gt;whereby mechanical power supplied by a pr...</p>
 </li>
 <li>
 <p class="folderTitle">Voltage</p>
@@ -3841,8 +3842,7 @@
 <p class="itemText">Bore and stroke are terms used to define the size of an engine. Bore refers to the diameter of the engine's cylinder, and stroke refers to the distance the piston travels from the top of the cylinder to the bottom. The highest point of travel by the piston is called top dead center (TDC), and the lowest point of travel is called bottom dead center (BDC). One stroke is 180° of travel up or down between TDC and BDC.<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;figure&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">   </span>&lt;caption/&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;image source="images/bore-stroke" width="50%"/&gt;<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;/figu...</p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;image source="images/bore-stroke" width="50%"&gt;&lt;remix&gt;&lt;s...</p>
 </li>
 <li>
 <p class="folderTitle">Engine Displacement</p>
@@ -3904,14 +3904,14 @@
 <p class="folderTitle">Introduction</p>
 <p class="itemText">To understand how diesel engines work, you will need familiarity with the major components of the engine and how they work together. &lt;xref ref="four-stroke-turbocharged"/&gt; illustrates a medium-sized, four-stroke, turbocharged, diesel engine with inlet ports and exhaust valves. &lt;xref ref="four-stroke-V-engine"/&gt; provides a cross section of a similarly sized V-type diesel engine which might be used for marine propulsion.<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="four-stroke-turbocharged"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">   </span>&lt;caption&gt; 2- 16 cylinder, 4 st...</p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">   </span>&lt;caption&gt;16 cylinder, 4 stroke...</p>
 </li>
 <li>
 <p class="folderTitle">The Cylinder Block</p>
 <p class="itemText">The cylinder block, as shown in &lt;xref ref="cylinder-block"/&gt;, is the main structure of an internal combustion engine. It houses the cylinders where the engine's pistons move up and down, and it provides the structure and rigid frame for the engine's cylinders, water coolant and oil passages, and support for the crankshaft and camshaft bearings. It is generally a single unit made from cast iron.<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="cylinder-block"&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">   </span>&lt;caption&gt;Cylinder Block &lt;/caption&gt;<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;image source="images/diese...</p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;image source="images/cylin...</p>
 </li>
 <li>
 <p class="folderTitle">Crankcase and Oil Pan</p>
@@ -3955,8 +3955,8 @@
 <p class="folderTitle"> Camshaft,<span class="Apple-converted-space">  </span>Valve Mechanism, and Timing Gears</p>
 <p class="itemText">In order for a diesel engine to operate, all of its components must perform their functions at very precise intervals in relation to the motion of the piston. To accomplish this, a component called a camshaft is used. &lt;xref ref="camshaft-and-drive-gear"/&gt; illustrates a camshaft and camshaft drive gear.<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">A camshaft is a long bar with egg-shaped eccentric lobes called cams, one lobe for each valve and fuel injector (discussed later).<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="camshaft-and-drive-gear"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">   </span>&lt;caption&gt;Camshaft ...</p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="camshaft-and-drive-gear"&gt; <span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">   </span>&lt;caption&gt;Camshaf...</p>
 </li>
 </ul>
 <hr class="afterText"/>
@@ -4035,8 +4035,7 @@
 <p class="itemText">Type APF pumps are of single-cylinder design, the plunger pump for each cylinder being in a separate housing. In a 6-cylinder engine, for example, there are six separate APF pumps. Each pump is cam-driven and regulated by an individual control rack.</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="bosch-apf"&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">   </span>&lt;caption&gt;Bosch 1 Cylinder Type APF Injection Pump&lt;/caption&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;image source="images/bosch-apf.png" width="70%"/&gt;<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;image source="images/bosch-apf.png" width="70%"&gt; &lt;remix&gt;&lt;source href="https://armypubs.army.mil/epubs/DR_pubs/DR_a/pdf/web/tc55_509.pdf"&gt;Marine Engineman’s ...</p>
 </li>
 <li>
 <p class="itemTitle">Type APE</p>
@@ -4057,9 +4056,7 @@
 <p class="itemText">When a high pressure pump and an injection nozzle are combined into one piece, the combination is called<span class="Apple-converted-space">  </span>a Unit Injector system.<span class="Apple-converted-space">  </span>This type of unit is commonly used in Detroit engines</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="unit-injector-pic"&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">   </span>&lt;caption&gt;Detroit Diesel Unit Injector &lt;/caption&gt;<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;image source="images/unit-injector-pic" width="65%"/&gt;<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;image source="images/unit-injector-pic" width="65%"&gt; &lt;remix&gt;&lt;source href="https://www.standards.doe.gov/standards-documents/1000/1018-bhdbk-1993-v1"&gt;DOE FUNDAMENTALS HANDBOOK MECHANICAL SCIENCE, US DOE Publication DOE-HDBK-...</p>
 </li>
 </ul>
 <hr class="afterText"/>
@@ -4632,7 +4629,7 @@
 <p class="itemText"></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>&lt;/caption&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;image source="images/wabtec_engine_generator"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt;&lt;![CDATA[ DV651M001-R5-MAIN GENERATOR ENGINE.pdf ]]&gt;&lt;/remix&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt;&lt;source&gt;DV651M001-R5-MAIN GENERATOR ENGINE.pdf&lt;/source&gt;&lt;/remix&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"><span class="Apple-converted-space"> </span></span></p></p>
@@ -4641,7 +4638,7 @@
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;tabular&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;row header="yes"&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt; Manufacturer &lt;/cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt; GE Wabtec&lt;...</p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt; GE Wabt...</p>
 </li>
 <li>
 <p class="folderTitle">Ship's History</p>
