--- a/knowl/xref/camshaft-and-drive-gear.html
+++ b/knowl/xref/camshaft-and-drive-gear.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<figure class="figure figure-like"><div class="image-box" style="width: 50%; margin-left: 25%; margin-right: 25%;"><img src="external/images/camshaft.png" class="contained"></div>
-<figcaption><span class="type">Figure</span><span class="space"> </span><span class="codenumber">6.4.12<span class="period">.</span></span><span class="space"> </span>Camshaft and Drive Gear</figcaption></figure><span class="incontext"><a class="internal" href="diesel-power--camshaft---valve-mechanism--and-timing-gears.html#camshaft-and-drive-gear">in-context</a></span>
+<figure class="figure figure-like"><div class="image-box" style="width: 50%; margin-left: 25%; margin-right: 25%;"><img src="external/images/camshaft.svg" role="img" class="contained"></div>
+<figcaption><span class="type">Figure</span><span class="space"> </span><span class="codenumber">6.4.13<span class="period">.</span></span><span class="space"> </span>Camshaft and Drive Gear</figcaption></figure><span class="incontext"><a class="internal" href="diesel-power--camshaft---valve-mechanism--and-timing-gears.html#camshaft-and-drive-gear">in-context</a></span>
 </body>
 </html>
