--- a/knowl/xref/four-stroke-V-engine.html
+++ b/knowl/xref/four-stroke-V-engine.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<figure class="figure figure-like"><div class="image-box" style="width: 50%; margin-left: 25%; margin-right: 25%;"><img src="external/images/diesel-image28.png" class="contained"></div>
-<figcaption><span class="type">Figure</span><span class="space"> </span><span class="codenumber">6.4.2<span class="period">.</span></span><span class="space"> </span>3 Cross Section of a V-type Four Stroke Diesel Engine</figcaption></figure><span class="incontext"><a class="internal" href="diesel-power-major-components-of-a-diesel-engine.html#four-stroke-V-engine">in-context</a></span>
+<figure class="figure figure-like"><div class="image-box" style="width: 100%; margin-left: 0%; margin-right: 0%;"><img src="external/images/v16-cutaway-end.svg" role="img" class="contained"></div>
+<figcaption><span class="type">Figure</span><span class="space"> </span><span class="codenumber">6.4.2<span class="period">.</span></span><span class="space"> </span>End View a V-type Four Stroke Diesel Engine</figcaption></figure><span class="incontext"><a class="internal" href="diesel-power-major-components-of-a-diesel-engine.html#four-stroke-V-engine">in-context</a></span>
 </body>
 </html>
