--- a/knowl/xref/four-stroke-turbocharged.html
+++ b/knowl/xref/four-stroke-turbocharged.html
@@ -12,6 +12,6 @@
 </head>
 <body class="ignore-math">
 <figure class="figure figure-like"><div class="image-box" style="width: 50%; margin-left: 25%; margin-right: 25%;"><img src="external/images/diesel-image27.png" class="contained"></div>
-<figcaption><span class="type">Figure</span><span class="space"> </span><span class="codenumber">6.4.1<span class="period">.</span></span><span class="space"> </span>2- 16 cylinder, 4 stroke, turbocharged diesel engine</figcaption></figure><span class="incontext"><a class="internal" href="diesel-power-major-components-of-a-diesel-engine.html#four-stroke-turbocharged">in-context</a></span>
+<figcaption><span class="type">Figure</span><span class="space"> </span><span class="codenumber">6.4.1<span class="period">.</span></span><span class="space"> </span>16 cylinder, 4 stroke, turbocharged diesel engine</figcaption></figure><span class="incontext"><a class="internal" href="diesel-power-major-components-of-a-diesel-engine.html#four-stroke-turbocharged">in-context</a></span>
 </body>
 </html>
