--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -1383,8 +1383,8 @@
 
 <li>
 <p class="folderTitle">Types of Torque</p>
-<p class="itemText">Static Torque is required to initiate movement from a standstill or to stop an already moving object. It is the torque required to overcome the inertia of a stationary object and start its rotation. Static torque also occurs when tightening or breaking loose a bolt.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Correct torque is crucial for bolted flanges to ensure a secure and leak-free connection. Applying the proper torque to the bolts on a flange ensures that the gasket is properly compressed, which prevents leaks and maintains the inte...</p>
+<p class="itemText">Static Torque is required to initiate movement from a standstill or to stop an already moving object. It is the torque required to overcome the inertia of a stationary object and start its rotation, or to overcome static friction such as when breaking loose a bolt.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Correct torque is crucial for bolted flanges to ensure a secure and leak-free connection. Applying the proper torque to the bolts on a flange ensures that the gasket is properly compressed, which prevents leaks and maintains the integ...</p>
 </li>
 <li>
 <p class="folderTitle">Torque Units</p>
@@ -1462,7 +1462,6 @@
 <li>
 <p class="itemTitle">introduction</p>
 <p class="itemText">Pressure is defined as force per unit area. That is, a force acting over an area is a pressure, and when you multiply a pressure by the area that it acts over, you get a force. &lt;me&gt; P = \frac{F}{A} \qquad \text{or} \qquad F = PA &lt;/me&gt; Pressure is directly proportional to force and inversely proportional to the area over which it is applied.<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"><span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;figure&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">   </span>&lt;caption&gt;Pressure acting on a body&lt;/caption&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">   </span>&lt;image width="50%" source="images/pressure-on-body.png"/&gt;</span></p></p>
@@ -3099,35 +3098,19 @@
 <p class="itemTitle">pipe schedule</p>
 <p class="itemText">&lt;table&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;title&gt;NPS Pipe Schedule - Wall thickness in inches.<span class="Apple-converted-space">  </span>ASME B36.10&lt;/title&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;tabular halign="center"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;row header="yes"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>NPS</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;/cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>OD Inch.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;/cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>Sch. 5</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;/cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>Sch. 10</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;/cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>Sch. 40</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;/cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>Sch. 80</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;/cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>Sch. 160</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;/cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;/row&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;row&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>1/8</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;/cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;ce...</p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;tabular halign="center"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">              </span>&lt;row header="yes"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">                </span>&lt;cell&gt;NPS&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">                </span>&lt;cell&gt;ODInch.&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">                </span>&lt;cell&gt;Sch.5&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">                </span>&lt;cell&gt;Sch.10&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">                </span>&lt;cell&gt;Sch.40&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">                </span>&lt;cell&gt;Sch.80&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">                </span>&lt;cell&gt;Sch.160&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">              </span>&lt;/row&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">              </span>&lt;row&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">                </span>&lt;cell&gt;1/8&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">                </span>&lt;cell&gt;0...</p>
 </li>
 </ul>
 <hr class="afterText"/>
@@ -4432,7 +4415,7 @@
 <p class="itemText"><p class="p1"><span class="s1">During startup, magnetizing the main transformers and charging the DC filter capacitors will draw a large (&gt; 400 A) current which can affect other parts of the electrical distribution system if not controlled.<span class="Apple-converted-space">  </span>The pre-charging system reduces the peak currents by limiting the charging rate with resistor...</p>
 </li>
 <li>
-<p class="folderTitle">DFE &lt;ndash/&gt; Diode Front End Section (DFE)</p>
+<p class="folderTitle">DFE&lt;ndash/&gt;Diode Front End Section (DFE)</p>
 <p class="itemText">This section contains the Diode Front Edge bridge. This bridge receives the output of the two secondary windings of the propulsion transformer and rectifies this to a DC voltage in the diode bridge.<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">The propulsion transformers reduce the network voltage (6,600 V) to the requirements of the frequency converters (1,850V). <span class="Apple-converted-space">  </span>The transformers have a single primary winding, delta connected, and two secondary windings, one is delta connected and the other is wye connected. This provides a 30° phase s...</p>
 </li>
