--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -3885,9 +3885,9 @@
 <ul>
 <li>
 <p class="folderTitle">Introduction</p>
-<p class="itemText">To understand how diesel engines work, you will need familiarity with the major components of the engine and how they work together. &lt;xref ref="four-stroke-turbocharged"/&gt; illustrates a medium-sized, four-stroke, turbocharged, diesel engine with inlet ports and exhaust valves. &lt;xref ref="four-stroke-V-engine"/&gt; provides a cross section of a similarly sized V-type diesel engine which might be used for marine propulsion.<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText">To understand how diesel engines work, you will need familiarity with the major components of the engine and how they work together. &lt;xref ref="four-stroke-turbocharged"/&gt; illustrates a medium-sized, four-stroke, turbocharged, diesel engine with inlet ports and exhaust valves. &lt;xref ref="two-stroke-V-engine"/&gt; provides a cross section of a similarly sized V-type diesel engine which might be used for marine propulsion.<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="four-stroke-turbocharged"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">   </span>&lt;caption&gt;16 cylinder, 4 stroke...</p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">   </span>&lt;caption&gt;16 cylinder, 4 stroke,...</p>
 </li>
 <li>
 <p class="folderTitle">The Cylinder Block</p>
@@ -3899,7 +3899,7 @@
 <li>
 <p class="folderTitle">Crankcase and Oil Pan</p>
 <p class="itemText">The crankcase is the part of an engine that houses the crankshaft and the crankshaft counter weights and also directs returning lube oil into the oil pan. <span class="Apple-converted-space">  </span>The oil pan collects and stores the engine's supply of lubricating oil. Large diesel engines may have the oil pan divided into several separate pans.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The crankcase is usually located on the bottom of the cylinder block with the oil pan directly below, as shown in &lt;xref ref="four-stroke-turbocharged"/&gt; and &lt;xref ref="four-stroke-V-engine"/&gt;.</p>
+<p class="itemText"><p class="p1"><span class="s1">The crankcase is usually located on the bottom of the cylinder block with the oil pan directly below, as shown in &lt;xref ref="four-stroke-turbocharged"/&gt; and &lt;xref ref="two-stroke-V-engine"/&gt;.</p>
 </li>
 <li>
 <p class="folderTitle">Cylinder Sleeve or Bore</p>
