--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -90,7 +90,10 @@
 <li>
 <p class="topLevelItemTitle">Front Matter</p>
 <p class="itemText">&lt;frontmatter xml:id="frontmatter"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;titlepage&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;titlepage&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;titlepage-items/&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;/titlepage&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;bibinfo&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;author&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;personname&gt;Massachusetts Maritime Academy&lt;/personname&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;department&gt;Engineering Department&lt;/department&gt;</span></p></p>
@@ -99,7 +102,7 @@
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">       </span>&lt;date&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;today/&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;/date&gt;<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">     </span>&lt;/titlepage&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/bibinfo&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>&lt;/frontmatter&gt;</p>
 </li>
 <li>
